# voice-assistant

./: .gitignore  Cargo.toml  README.md  requirements.txt
src/: beep.rs  lib.rs  main.rs  recording  utils.rs  wake_recording
src/config/: config.json  config_default.json  mod.rs
src/llm/: mod.rs
src/speech_to_text/: faster_whisper.rs  mod.rs  wake.rs
src/text_to_speech/: mod.rs
src/text_to_speech/models/: coqui.rs  gtts.rs  mod.rs  parler.rs
src/voice/: mod.rs  sade.rpw
