[package]
name = "voice-assistant-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = { version = "0.1.8", features = ["chat-history"] }
online = { version = "4.0.2", features = ["tokio"] }
text-splitter = "0.10.0"
tokio = { version = "1.37.0", features = ["full"] }
tts = "0.26.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
crossbeam = "0.8.4"
hound = "3.5.1"
cpal = "0.15.3"
wav = "1.0.0"
regex = "1.10.4"
nnnoiseless = "0.5.1"
rustpotter = "3.0.2"
simple_transcribe_rs = "1.0.3"
whisper-rs = "0.10.0"
rodio = "0.18.1"
pyo3 = {version="0.21.2", features=["auto-initialize"]}
natural-tts = "0.1.3"
faster-whisper-rs = {version = "0.2.0" }

